Changes for Perl Application Development and Refactoring Environment

0.50 to be released
    - Add initial version of a regex editor. (SZABGAB)
    - Fixed ticket:728 "Changing locale crashes Padre" (AZAWAWI)
    - Menubar is now configurable but still lacks a dialog for this (SEWI)
    - Beginner error checks are now configurable (turn each single one on
      or off) (SEWI)
    - Fixed ticket #710: share/doc/perlopref.pod missing author/license (AZAWAWI)
    - Added basic FTP-remote-editing capability (SEWI)
    - Initial version of "Find Method Declaration" (SZABGAB)

0.49 2009.11.02
    - Fixed #691: Extract subroutine does not work for a script without
      subroutines (WAXHEAD)
    - Bugfix: The split-beginner-error check got false positives (SEWI)
    - Moved more menu actions to independent actions (SEWI)
    - Added a readonly flag to the taskbar (AGN)
    - Fixed #698: Syntax checker leaks files in tmpdir (SEWI)
    - Syntax checker now also shows a successful check (SEWI)
    - Added menu option to reload all open files (SEWI)
    - The current selection or document may be filtered through an external
      command now (SEWI)
    - Low-priority popup messages could be moved to the status bar by setting
      a preferences option (SEWI)
    - require IPC::Open2 and IPC::Open3 as they are both used in the code (SZABGAB)
    - Improved autocomplete (always) results (SEWI)
    - Run make and TDD-tests in one step (KTHAKORE)
    - Padre is now an XP-themed win32 application (AZAWAWI)
    - Auto-save session state is now possible (SEWI)
    - Auto completion usability fixes (AZAWAWI)
    - Padre syntax images are now 16x16 transparent PNG images instead of 14x7 
      (AZAWAWI)
    - Fixed ticket:372 "window list should be sorted alphabetically" (AZAWAWI)
    - Added "shorten common path in window list" to preferences (AZAWAWI)
    - Fixed ticket:709 "Show editor window listed by project, then project-
      relative path" (AZAWAWI)