@@ -37,7 +37,7 @@ sub new {
 		label      => Wx::gettext('Help'),
 		comment    => Wx::gettext('Show the Padre help'),
 		menu_event => sub {
-			$_[0]->help();
+			$_[0]->help('Padre');
 		},
 	);
 	Padre::Action->new(
@@ -50,9 +50,7 @@ sub new {
 			if ( ( defined $focus ) and $focus->isa('Padre::Wx::ErrorList') ) {
 				$_[0]->errorlist->on_menu_help_context_help;
 			} else {
-
-				# TODO This feels wrong, the help menu code shouldn't
-				# populate the main window hash.
+	                        #Show help for selected text
 				$_[0]->help( $_[0]->current->text );
 				return;
 			}
