@@ -1,6 +1,7 @@
 Changes for Perl Application Development and Refactoring Environment
 
 0.50 to be released
+    - Fixed #686 DocBrowser launching Padre help (BRAMBLE)
     - Add initial version of a regex editor. (SZABGAB)
     - Fixed ticket:728 "Changing locale crashes Padre" (AZAWAWI)
     - Menubar is now configurable but still lacks a dialog for this (SEWI)
